weather-api-part1

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -17,7 +17,8 @@
   border-style: outset;
   padding: 2em;
   margin: 2em;
-  background-color:#0087c0;
+  background-image: url("https://scontent-bos3-1.xx.fbcdn.net/v/t1.6435-9/165207537_3494506650655674_6032443256751856876_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=itgXoRx9C-oAX8Qkmgc&_nc_ht=scontent-bos3-1.xx&oh=00_AT8aBm1llh3HUVFBkqAuMAwJGB4_FgCrRW0ZlqmlOCZlLQ&oe=62B1B963");
+  // background-color:#0087c0;
 }
 
 .event-tile a {
