--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -368,3 +368,15 @@ h2{
 //   border-style: solid;
 //   border-color: black;
 // }
+
+.checkout-button {
+  border-radius: 10px;
+  margin-left: 1.5em;
+  margin-top: .25em;
+}
+
+.delete-button {
+  // margin-left: 10em;
+  border-radius: 10px;
+  margin-top: .25em;
+}
