--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -99,7 +99,7 @@ h2{
 }
 
 .event-list-container{
-  background-color:#000000;
+  background-color:#d3d3d3;
 }
 
 .event-list-form{
@@ -392,4 +392,9 @@ h2{
 
 #nav-dropdown{
   color: white;
+}
+
+.bootstrap-event-form{
+  padding: 20px;
+  background-color: #a1a1a1;
 }
