--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -398,3 +398,8 @@ h2{
   padding: 20px;
   background-color: #a1a1a1;
 }
+.card {
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px; /* Added */
+}
