edit-profile-pic

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -396,7 +396,9 @@ h2{
 
 .bootstrap-event-form{
   padding: 20px;
-  background-color: #a1a1a1;
+  background-color: #f7f7f7;
+  margin-left:40px;
+  margin-right: 40px;
 }
 .card {
   margin: 0 auto; /* Added */
