--- a/client/src/assets/style/tailwind.css
+++ b/client/src/assets/style/tailwind.css
@@ -496,13 +496,47 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 0.5rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem; /* 8px */
+}
+
+.pt-6{
+  padding-top: 1.5rem; /* 8px */
+}
+
 .bottom-5{
   bottom: 1.25rem;
+}
+
+.font-medium{
+  font-weight: 500;
+}	
+
+.pb-3{
+  padding-bottom: 0.75rem; /* 12px */
+}
+
+.pt-3{
+  padding-top: 0.75rem; /* 12px */
+}
+
+.img{
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+}
+
+.pt-3{
+  padding-top: 1.5rem; /* 12px */
 }
 
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.block{
+  display: block;
 }
 
 .my-2{
@@ -515,12 +549,35 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem; /* 30px */
+  line-height: 2.25rem; /* 36px */
+}
+
 .mt-48{
   margin-top: 12rem;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
 .mt-1{
   margin-top: 0.25rem;
+}
+
+.py-12{
+  padding-top: 3rem; /* 48px */
+  padding-bottom: 3rem; /* 48px */
+}
+
+.py-8{
+  padding-top: 2rem; /* 48px */
+  padding-bottom: 2rem; /* 48px */
 }
 
 .mb-3{
@@ -535,6 +592,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.5rem;
 }
 
+.mt-2{
+  margin-top: 0.75rem;
+}
+
 .mb-1{
   margin-bottom: 0.25rem;
 }
@@ -542,6 +603,31 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-4{
   margin-left: 1rem;
 
+}
+
+.ml-2{
+  margin-left: .5rem;
+
+}
+
+.no-underline{
+  text-decoration-line: none;
+}
+
+.space-x-1{
+  margin-left: 0.25rem;
+}
+
+.mr-2{
+  margin-right: .5rem;
+}
+
+.mr-1{
+  margin-right: .25rem;
+}
+
+.ml-1{
+  margin-left: .25rem;
 }
 
 .mt-4{
@@ -597,6 +683,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-height: 100%;
 }
 
+.min-h-screen{
+  min-height: 100vh;
+}
+
 .min-h-\[69vh\]{
   min-height: 69vh;
 }
@@ -605,8 +695,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100%;
 }
 
+.bg-red-600{
+  background-color: rgb(220 38 38);
+}
+
+.bg-red-700{
+  background-color: rgb(185 28 28)
+}
+
 .w-1\/2{
   width: 50%;
+}
+
+.w-1\/3{
+  width: 33%;
 }
 
 .w-\[89\%\]{
@@ -779,6 +881,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow-wrap: break-word;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
 }
@@ -795,12 +901,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 9999px;
 }
 
+.bg-gray-900{
+  background-color: rgb(17 24 39);
+}
+
+.bg-gray-100{
+  background-color: rgb(243 244 246);
+}
+
 .rounded-3xl{
   border-radius: 1.5rem;
 }
 
 .border{
   border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.bg-color-black{
+  background-color: black;
 }
 
 .border-gray-200{
@@ -832,6 +954,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
+
+.bg-gray-800 { background-color: #2d3748; }
+
 
 .bg-slate-200{
   --tw-bg-opacity: 1;
@@ -907,6 +1032,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.25rem;
 }
 
+.py-1{
+  padding-top: 0.50rem;
+  padding-bottom: 0.50rem;
+}
+
+.py-2{
+  padding-top: 0.50rem;
+  padding-bottom: 0.50rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -947,6 +1082,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.5rem;
 }
 
+.px-8{
+  padding-right: 2rem;
+}
+
 .py-\[10em\]{
   padding-top: 10em;
   padding-bottom: 10em;
@@ -972,6 +1111,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-Lobster{
   font-family: Lobster, cursive;
+}
+
+.font-extrabold{
+  font-weight: 800;
 }
 
 .text-2xl{
@@ -1020,6 +1163,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+color:rgb(107 114 128);
+}
+
+.text-gray-900{
+  color: rgb(17 24 39);
 }
 
 .text-\[\#ff485a\]{
@@ -1115,7 +1266,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 0.5;
 }
 
+@media (min-width: 640px){
+}
+
 @media (min-width: 976px){
+
+  .lg-w1\/3{
+    max-width: 33%;
+  }
+
   .lg\:flex{
     display: flex;
   }
