--- a/client/src/assets/style/tailwind.css
+++ b/client/src/assets/style/tailwind.css
@@ -526,6 +526,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 200px;
 }
 
+.img-2{
+  object-fit: contain;
+  width: 50px;
+  height: 60px;
+}
+
 .pt-3{
   padding-top: 1.5rem; /* 12px */
 }
